CORE-31929: Adding proper SS for theme list page, uninstalling themes redundant from transac sites.

--- a/docroot/themes/custom/non_transac/bath_body_works/bath_body_works.info.yml
+++ b/docroot/themes/custom/non_transac/bath_body_works/bath_body_works.info.yml
@@ -1,5 +1,5 @@
 name: Bath and Body Works
-description: Theme for Bath and Body Works.
+description: Theme for Bath and Body Works - Non Transac site.
 type: theme
 core: 8.x
 core_version_requirement: ^8 || ^9
