--- a/docroot/themes/custom/non_transac/victoria_secret/victoria_secret.info.yml
+++ b/docroot/themes/custom/non_transac/victoria_secret/victoria_secret.info.yml
@@ -1,5 +1,5 @@
 name: Victoria Secret
-description: Theme for Victoria Secret.
+description: Theme for Victoria Secret - Non transac site.
 type: theme
 core: 8.x
 core_version_requirement: ^8 || ^9
