--- a/docroot/themes/custom/non_transac/bouchon_bakery/bouchon_bakery.info.yml
+++ b/docroot/themes/custom/non_transac/bouchon_bakery/bouchon_bakery.info.yml
@@ -1,5 +1,5 @@
 name: Bouchon Bakery
-description: Theme for Bouchon Bakery.
+description: Theme for Bouchon Bakery - Non transac site.
 type: theme
 core: 8.x
 core_version_requirement: ^8 || ^9
