--- a/docroot/themes/custom/non_transac/debenhams/debenhams.info.yml
+++ b/docroot/themes/custom/non_transac/debenhams/debenhams.info.yml
@@ -1,5 +1,5 @@
 name: Debenhams
-description: Theme for Debenhams.
+description: Theme for Debenhams - Non transac site.
 type: theme
 core: 8.x
 core_version_requirement: ^8 || ^9
