--- a/docroot/themes/custom/non_transac/justice/justice.info.yml
+++ b/docroot/themes/custom/non_transac/justice/justice.info.yml
@@ -1,5 +1,5 @@
 name: Justice
-description: Theme for Justice.
+description: Theme for Justice - Non transac site.
 type: theme
 core: 8.x
 core_version_requirement: ^8 || ^9
