--- a/docroot/themes/custom/non_transac/vision_express/vision_express.info.yml
+++ b/docroot/themes/custom/non_transac/vision_express/vision_express.info.yml
@@ -1,5 +1,5 @@
 name: Vision Express
-description: Theme for Vision Express.
+description: Theme for Vision Express - Non transac site.
 type: theme
 core: 8.x
 core_version_requirement: ^8 || ^9
