--- a/docroot/themes/custom/transac_lite/kidzania/kidzania.info.yml
+++ b/docroot/themes/custom/transac_lite/kidzania/kidzania.info.yml
@@ -1,5 +1,5 @@
 name: KidZania
-description: Theme for KidZania brands.
+description: Theme for KidZania brand - Transac Lite.
 type: theme
 core: 8.x
 core_version_requirement: ^8 || ^9
