--- a/docroot/modules/custom/alshaya_rcs/alshaya_rcs.info.yml
+++ b/docroot/modules/custom/alshaya_rcs/alshaya_rcs.info.yml
@@ -6,3 +6,4 @@ core_version_requirement: ^8 || ^9
 dependencies:
   - rcs_placeholders:rcs_placeholders
   - rcs_magento_placeholders:rcs_magento_placeholders
+  - alshaya_rcs_magento_placeholders:alshaya_rcs_magento_placeholders
