--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_magento_placeholders/alshaya_rcs_magento_placeholders.info.yml
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_magento_placeholders/alshaya_rcs_magento_placeholders.info.yml
@@ -2,3 +2,5 @@ name: Alshaya RCS Magento Placeholders
 description: Provides replacement for magento placeholders.
 type: module
 core_version_requirement: ^8 || ^9
+dependencies:
+  - alshaya_rcs:alshaya_rcs
