--- a/docroot/modules/react/alshaya_react/alshaya_react.libraries.yml
+++ b/docroot/modules/react/alshaya_react/alshaya_react.libraries.yml
@@ -1,5 +1,5 @@
 react:
-  version: 1.x
+  version: 2
   header: true
   js:
     js/react.production.min.js: {preprocess: false, attributes: { async: true } }
