--- a/docroot/modules/react/alshaya_react/alshaya_react.libraries.yml
+++ b/docroot/modules/react/alshaya_react/alshaya_react.libraries.yml
@@ -2,8 +2,8 @@ react:
   version: 2
   header: true
   js:
-    js/react.production.min.js: {preprocess: false, attributes: { async: true } }
-    js/react-dom.production.min.js: {preprocess: false, attributes: { async: true } }
+    js/react.production.min.js: { preprocess: false, minified: true }
+    js/react-dom.production.min.js: { preprocess: false, minified: true }
   dependencies:
     - core/drupal
     - alshaya_react/react_pollyfill
