CORE-31343: Handle replacement of the V1 menu block on install and uninstall of module.

--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/config/install/block.block.alshayarcsmainmenu.yml
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/config/install/block.block.alshayarcsmainmenu.yml
@@ -7,7 +7,7 @@ dependencies:
     - alshaya_white_label
 id: alshayarcsmainmenu
 # @Todo: Use alshaya whitelabel and then move it to current theme.
-theme: alshaya_hnm
+theme: alshaya_white_label
 region: pre_content
 weight: -20
 provider: null
