CORE-31343: Get the latest from upstream and resolve the conflict.

--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/alshaya_rcs_main_menu.libraries.yml
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/alshaya_rcs_main_menu.libraries.yml
@@ -2,5 +2,5 @@ renderer:
   js:
     dist/alshaya_rcs_main_menu_renderer.bundle.js: {}
   dependencies:
-    - alshaya_rcs/renderer
+    - alshaya_rcs_magento_placeholders/main
     - rcs_magento_placeholders/rcs_magento_placeholders
