--- a/tests/behat/templates/variables/brands/pb/env/prod/markets/ae/ae.yml
+++ b/tests/behat/templates/variables/brands/pb/env/prod/markets/ae/ae.yml
@@ -1,5 +1,5 @@
 variables:
   spc_product_listing_page: '/shop-outdoor/shop-category/outdoor-dining-furniture/'
   spc_basket_page: '/shop-outdoor/shop-category/outdoor-dining-furniture/'
-  spc_pdp_page: ''
+  spc_pdp_page: 'buy-turkish-striped-beach-towel.html'
   product_listing_page_url: "/shop-outdoor/shop-category/outdoor-dining-furniture/"
