CORE-31491: Drush command to export product category data.

--- a/docroot/modules/custom/alshaya_acm_product_category/drush.services.yml
+++ b/docroot/modules/custom/alshaya_acm_product_category/drush.services.yml
@@ -3,5 +3,10 @@ services:
     class: \Drupal\alshaya_acm_product_category\Commands\AlshayaAcmProductCategoryDrushCommands
     arguments:
       - '@alshaya_acm_product_category.category_sync_manager'
+      - '@alshaya_acm_product_category.product_category_tree'
+      - '@file_system'
+      - '@entity_type.manager'
+      - '@metatag.manager'
+      - '@metatag.token'
     tags:
       - { name: drush.command }
