CORE-32147: Created a conditional library for PUDO Aramex on checkout page.

--- a/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
+++ b/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
@@ -494,3 +494,8 @@ secondary-menu:
   css:
     theme:
       css/conditional-sass/secondary-menu/secondary-menu.ltr.css: {}
+
+checkout-pudo-aramex:
+  css:
+    theme:
+      css/conditional-sass/checkout-pudo-aramex/checkout-pudo-aramex.ltr.css: {}
