--- a/tests/behat/templates/variables/brands/hm/env/uat/markets/kw/kw.yml
+++ b/tests/behat/templates/variables/brands/hm/env/uat/markets/kw/kw.yml
@@ -2,5 +2,5 @@ variables:
   url_product_page: 'buy-slub-jersey-henley-shirt-green-grey-marl-0.html'
   product_listing_page_url: "/shop-lingerie/"
   spc_product_listing_page: '/shop-lingerie/'
-  spc_basket_page: '/shop-lingerie/'
-  spc_pdp_page: ''
+  spc_basket_page: '/shop-ladies/shoes-accessories/'
+  spc_pdp_page: 'buy-long-sleeved-blouse-black.html'
