CORE-31491: Replaced drush output with drupal logger.

--- a/docroot/modules/custom/alshaya_acm_product_category/drush.services.yml
+++ b/docroot/modules/custom/alshaya_acm_product_category/drush.services.yml
@@ -8,5 +8,6 @@ services:
       - '@entity_type.manager'
       - '@metatag.manager'
       - '@metatag.token'
+      - '@logger.factory'
     tags:
       - { name: drush.command }
