--- a/.lando.yml
+++ b/.lando.yml
@@ -77,7 +77,7 @@ proxy:
 
 tooling:
   vim:
-    service: myservice
+    service: appserver
   blt:
     service: appserver
     cmd: /app/vendor/acquia/blt/bin/blt
