CORE-30550: Added drush command to export product data.

--- a/docroot/modules/custom/alshaya_acm_product/drush.services.yml
+++ b/docroot/modules/custom/alshaya_acm_product/drush.services.yml
@@ -13,3 +13,16 @@ services:
       - '@acq_commerce.ingest_api'
     tags:
       - { name: drush.command }
+
+  alshaya_acm_product.product_export_commands:
+    class: Drupal\alshaya_acm_product\Commands\ProductExportCommands
+    arguments:
+      - '@entity_type.manager'
+      - '@alshaya_acm_product.skumanager'
+      - '@metatag.manager'
+      - '@request_stack'
+      - '@language_manager'
+      - '@module_handler'
+      - '@file_system'
+    tags:
+      - { name: drush.command }
