--- a/docroot/modules/custom/rcs_placeholders/config/install/core.entity_view_display.taxonomy_term.rcs_category.default.yml
+++ b/docroot/modules/custom/rcs_placeholders/config/install/core.entity_view_display.taxonomy_term.rcs_category.default.yml
@@ -1,18 +1,31 @@
-uuid: 46d6835d-ae9f-4713-9b60-6d11e4797fdd
 langcode: en
 status: true
 dependencies:
   config:
     - field.field.taxonomy_term.rcs_category.field_category_slug
+    - field.field.taxonomy_term.rcs_category.field_metatags
     - taxonomy.vocabulary.rcs_category
   module:
-    - path
+    - metatag
     - text
-_core:
-  default_config_hash: c4GyBSHQqBHt2RYCuq_4lPymn750N2iDBvRXgHmc_XE
 id: taxonomy_term.rcs_category.default
 targetEntityType: taxonomy_term
 bundle: rcs_category
 mode: default
 content:
-hidden: {  }
+  description:
+    label: hidden
+    type: text_default
+    weight: 0
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  field_metatags:
+    weight: 3
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: metatag_empty_formatter
+    region: content
+hidden:
+  field_category_slug: true
