--- a/docroot/modules/custom/rcs_placeholders/config/install/metatag.metatag_defaults.taxonomy_term__rcs_category.yml
+++ b/docroot/modules/custom/rcs_placeholders/config/install/metatag.metatag_defaults.taxonomy_term__rcs_category.yml
@@ -4,6 +4,6 @@ dependencies: {  }
 id: taxonomy_term__rcs_category
 label: 'Taxonomy term: RCS Category'
 tags:
-  canonical_url: 'shop-#rcs.category.slug#'
+  canonical_url: '[rcs:category-path-prefix]#rcs.category.slug#'
   description: '#rcs.category.metaDescription#'
   title: '#rcs.category.metaTitle# | [site:name]'
