--- a/docroot/modules/custom/rcs_placeholders/rcs_placeholders.info.yml
+++ b/docroot/modules/custom/rcs_placeholders/rcs_placeholders.info.yml
@@ -2,10 +2,11 @@ name: RCS Placeholders
 description: Provides placeholders that will be dynamically replaced outside of Drupal.
 package: RCS
 type: module
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^9
 
 dependencies:
+  - config_rewrite:config_rewrite
   - drupal:taxonomy
   - metatag:metatag
+  - pathauto:pathauto
   - redirect:redirect
-  - config_rewrite:config_rewrite
