CORE-31494: Added RCS PLP module and block.

--- a/docroot/modules/react/alshaya_algolia_react/alshaya_algolia_react.libraries.yml
+++ b/docroot/modules/react/alshaya_algolia_react/alshaya_algolia_react.libraries.yml
@@ -46,6 +46,14 @@ plp:
     - core/drupalSettings
     - alshaya_algolia_react/algolia_common
 
+plpv2:
+  js:
+    dist/plpv2.js: {}
+    js/alshaya_algolia_plp.js: {}
+  dependencies:
+    - core/drupalSettings
+    - alshaya_algolia_react/algolia_common
+
 algolia_common:
   js:
     js/alshaya_algolia_global.js: {}
