--- a/docroot/modules/custom/rcs_placeholders/config/install/core.entity_form_display.node.rcs_product.default.yml
+++ b/docroot/modules/custom/rcs_placeholders/config/install/core.entity_form_display.node.rcs_product.default.yml
@@ -20,21 +20,6 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_metatags:
-    weight: 51
-    settings:
-      sidebar: true
-    third_party_settings: {  }
-    type: metatag_firehose
-    region: content
-  field_product_slug:
-    type: string_textfield
-    weight: 1
-    region: content
-    settings:
-      size: 255
-      placeholder: ''
-    third_party_settings: {  }
   path:
     type: path
     weight: 6
@@ -87,3 +72,5 @@ content:
     region: content
 hidden:
   body: true
+  field_metatags: true
+  field_product_slug: true
