--- a/docroot/modules/custom/rcs_placeholders/config/install/core.entity_form_display.taxonomy_term.rcs_category.default.yml
+++ b/docroot/modules/custom/rcs_placeholders/config/install/core.entity_form_display.taxonomy_term.rcs_category.default.yml
@@ -22,21 +22,6 @@ content:
       placeholder: ''
       rows: 5
     third_party_settings: {  }
-  field_category_slug:
-    type: string_textfield
-    weight: 1
-    region: content
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-  field_metatags:
-    weight: 7
-    settings:
-      sidebar: true
-    third_party_settings: {  }
-    type: metatag_firehose
-    region: content
   name:
     type: string_textfield
     weight: 0
@@ -58,4 +43,6 @@ content:
     weight: 2
     region: content
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  field_category_slug: true
+  field_metatags: true
