--- a/docroot/modules/custom/rcs_placeholders/rcs_placeholders.info.yml
+++ b/docroot/modules/custom/rcs_placeholders/rcs_placeholders.info.yml
@@ -2,7 +2,7 @@ name: RCS Placeholders
 description: Provides placeholders that will be dynamically replaced outside of Drupal.
 package: RCS
 type: module
-core_version_requirement: ^9
+core_version_requirement: ^8 || ^9
 
 dependencies:
   - config_rewrite:config_rewrite
