--- a/docroot/themes/custom/transac/alshaya_the_body_shop/alshaya_the_body_shop.info.yml
+++ b/docroot/themes/custom/transac/alshaya_the_body_shop/alshaya_the_body_shop.info.yml
@@ -100,3 +100,8 @@ libraries-override:
     css:
       theme:
         css/conditional-sass/smart-agent/smart-agent.ltr.css: css/conditional-sass/smart-agent/smart-agent.ltr.css
+
+  alshaya_white_label/my-account:
+    css:
+      theme:
+        css/conditional-sass/my-account/my-account.ltr.css: css/conditional-sass/my-account/my-account.ltr.css
