--- a/docroot/themes/custom/transac/alshaya_westelm/alshaya_westelm.info.yml
+++ b/docroot/themes/custom/transac/alshaya_westelm/alshaya_westelm.info.yml
@@ -116,3 +116,8 @@ libraries-override:
     css:
       theme:
         css/conditional-sass/secondary-menu/secondary-menu.ltr.css: css/conditional-sass/secondary-menu/secondary-menu.ltr.css
+
+  alshaya_white_label/my-account:
+    css:
+      theme:
+        css/conditional-sass/my-account/my-account.ltr.css: css/conditional-sass/my-account/my-account.ltr.css
