--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_listing/config/install/block.block.alshaya_algolia_listing_v2.yml
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_listing/config/install/block.block.alshaya_algolia_listing_v2.yml
@@ -3,19 +3,19 @@ langcode: en
 status: true
 dependencies:
   module:
-    - alshaya_rcs_plp
+    - alshaya_rcs_listing
   theme:
     - alshaya_white_label
-id: alshaya_algolia_plp_v2
+id: alshaya_algolia_listing_v2
 theme: alshaya_white_label
 region: content
 weight: 9
 provider: null
-plugin: alshaya_algolia_plp_v2
+plugin: alshaya_algolia_listing_v2
 settings:
-  id: alshaya_algolia_plp_v2
-  label: 'Alshaya Algolia PLP V2'
-  provider: alshaya_rcs_plp
+  id: alshaya_algolia_listing_v2
+  label: 'Alshaya Algolia Listing V2'
+  provider: alshaya_rcs_listing
   label_display: '0'
 visibility:
   request_path:
