--- a/tests/behat/templates/variables/brands/fl/env/uat/markets/ae/ae.yml
+++ b/tests/behat/templates/variables/brands/fl/env/uat/markets/ae/ae.yml
@@ -1,5 +1,5 @@
 variables:
-  spc_product_listing_page: '/shop-mens/shoes-0/'
-  spc_basket_page: '/shop-mens/shoes-0/'
-  spc_pdp_page: ''
-  product_listing_page_url: '/shop-mens/shoes-0/'
+  spc_product_listing_page: '/shop-mens/accessories-0/'
+  spc_basket_page: '/shop-mens/accessories-0/'
+  spc_pdp_page: 'buy-nike-cl99-trucker-cap-obsidian-white-black.html'
+  product_listing_page_url: '/shop-mens/accessories-0/'
