--- a/tests/behat/templates/variables/brands/mc/env/uat/markets/ae/ae.yml
+++ b/tests/behat/templates/variables/brands/mc/env/uat/markets/ae/ae.yml
@@ -1,5 +1,8 @@
 variables:
-  spc_product_listing_page: '/shop-baby-clothing/baby-newborn-18-months/'
-  spc_basket_page: '/shop-baby-clothing/baby-newborn-18-months/'
-  spc_pdp_page: ''
-  product_listing_page_url: "/shop-baby-clothing/baby-newborn-18-months/"
+  spc_product_listing_page: '/#query=babyzen/'
+  spc_basket_page: '/#query=babyzen/'
+  spc_pdp_page: 'buy-mothercare-little-lane-comfi-trainer-seat.html'
+  product_listing_page_url: "/#query=babyzen/"
+  spc_plp_add_to_cart_single: '/#query=babyzen/'
+  spc_promotion_listing_page: '/buy-1-get-1-free-en/'
+  spc_single_product_detail_page_coupon: 'buy-mothercare-little-lane-comfi-trainer-seat.html'
