--- a/tests/behat/templates/variables/brands/mc/env/uat/markets/kw/kw.yml
+++ b/tests/behat/templates/variables/brands/mc/env/uat/markets/kw/kw.yml
@@ -1,6 +1,8 @@
 variables:
-  spc_product_listing_page: '/shop-clothing/newborn/newborn-boys/'
-  spc_basket_page: '/shop-clothing/newborn/newborn-boys/'
-  spc_pdp_page: ''
-  product_listing_page_url: '/shop-clothing/newborn/newborn-boys/'
-  spc_plp_add_to_cart_single: '/shop-clothing/newborn/newborn-boys/'
+  spc_product_listing_page: '/shop-for-home-on-the-go/'
+  spc_basket_page: '/shop-for-home-on-the-go/'
+  spc_pdp_page: 'buy-white-sleepsuits-3-pack.html'
+  product_listing_page_url: '/shop-for-home-on-the-go/'
+  spc_plp_add_to_cart_single: '/shop-for-home-on-the-go/'
+  spc_promotion_listing_page: '/buy-3-get-1-free-en/'
+  spc_single_product_detail_page_coupon: 'buy-white-sleepsuits-3-pack.html'
