--- a/tests/behat/templates/variables/brands/mc/env/uat/markets/sa/sa.yml
+++ b/tests/behat/templates/variables/brands/mc/env/uat/markets/sa/sa.yml
@@ -1,5 +1,8 @@
 variables:
-  spc_product_listing_page: '/shop-premium-brands/juicy-couture/'
-  spc_basket_page: '/shop-premium-brands/juicy-couture/'
-  spc_pdp_page: ''
-  product_listing_page_url: "/shop-premium-brands/juicy-couture/"
+  spc_product_listing_page: '/shop-clothing/boys-wear/tops/shirts/'
+  spc_basket_page: '/shop-clothing/boys-wear/tops/shirts/'
+  spc_pdp_page: 'buy-mothercare-little-lane-comfi-trainer-seat.html'
+  product_listing_page_url: "/shop-clothing/boys-wear/tops/shirts/"
+  spc_plp_add_to_cart_single: '/shop-clothing/boys-wear/tops/shirts/'
+  spc_promotion_listing_page: '/buy-1-get-1-free-en/'
+  spc_single_product_detail_page_coupon: 'buy-mothercare-little-lane-comfi-trainer-seat.html'
