--- a/docroot/modules/custom/alshaya_pims/alshaya_pims.info.yml
+++ b/docroot/modules/custom/alshaya_pims/alshaya_pims.info.yml
@@ -1,6 +1,6 @@
 name: 'Alshaya PIMS'
 type: module
-core: 9.x
+core_version_requirement: ^8.8.0 || ^9
 dependencies:
   - alshaya_acm_product:alshaya_acm_product
 package: Alshaya
