--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_listing/alshaya_rcs_listing.info.yml
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_listing/alshaya_rcs_listing.info.yml
@@ -6,3 +6,4 @@ core_version_requirement: ^8 || ^9
 dependencies:
   - alshaya_rcs:alshaya_rcs
   - alshaya_algolia_react:alshaya_algolia_react
+  - alshaya_rcs_magento_placeholders:alshaya_rcs_magento_placeholders
