--- a/docroot/modules/custom/alshaya_acm_product/alshaya_acm_product.services.yml
+++ b/docroot/modules/custom/alshaya_acm_product/alshaya_acm_product.services.yml
@@ -89,6 +89,7 @@ services:
       - '@acq_sku.product_info_helper'
       - '@cache.data'
       - '@alshaya_acm_product.cache_manager'
+      - '@alshaya_acm_product.sku_images_helper'
   cache.alshaya:
     class: Drupal\Core\Cache\CacheInterface
     tags:
@@ -176,6 +177,7 @@ services:
       - '@current_route_match'
       - '@alshaya_acm_product.skumanager'
       - '@alshaya_acm_product.sku_images_manager'
+      - '@alshaya_acm_product.sku_images_helper'
     tags:
       - { name: event_subscriber }
   alshaya_acm_product.product_order_limit:
@@ -193,3 +195,5 @@ services:
     class: Drupal\alshaya_acm_product\AlshayaRequestContextManager
     arguments:
       - '@request_stack'
+  alshaya_acm_product.sku_images_helper:
+    class: Drupal\alshaya_acm_product\SkuImagesHelper
