--- a/docroot/modules/custom/alshaya_pims/alshaya_pims.services.yml
+++ b/docroot/modules/custom/alshaya_pims/alshaya_pims.services.yml
@@ -12,3 +12,11 @@ services:
       - '@acq_sku.product_info_helper'
       - '@cache.data'
       - '@alshaya_acm_product.cache_manager'
+      - '@alshaya_pims.sku_images_helper'
+
+  alshaya_pims.sku_images_helper:
+    class: Drupal\alshaya_pims\SkuImagesHelperPims
+    decorates: alshaya_acm_product.sku_images_helper
+    decoration_priority: 9
+    arguments:
+      - '@alshaya_pims.sku_images_helper.inner'
