--- a/docroot/modules/custom/alshaya_search_algolia/alshaya_search_algolia.services.yml
+++ b/docroot/modules/custom/alshaya_search_algolia/alshaya_search_algolia.services.yml
@@ -22,3 +22,4 @@ services:
       - '@alshaya_facets_pretty_paths.pretty_aliases'
       - '@acq_sku.product_info_helper'
       - '@module_handler'
+      - '@alshaya_acm_product.sku_images_helper'
