CORE-30476: V2 API for product linked skus.

--- a/docroot/modules/custom/alshaya_acm_product/config/override/user.role.anonymous.yml
+++ b/docroot/modules/custom/alshaya_acm_product/config/override/user.role.anonymous.yml
@@ -5,3 +5,4 @@ permissions:
   - 'restful get stock_v2'
   - 'restful get product_v2'
   - 'restful get product_status'
+  - 'restful get product_linked_skus_v2'
