--- a/docroot/modules/custom/alshaya_acm_product/config/override/user.role.authenticated.yml
+++ b/docroot/modules/custom/alshaya_acm_product/config/override/user.role.authenticated.yml
@@ -5,3 +5,4 @@ permissions:
   - 'restful get stock_v2'
   - 'restful get product_v2'
   - 'restful get product_status'
+  - 'restful get product_linked_skus_v2'
