CORE-31491: Added code to export translated content and also added the batch process.

--- a/docroot/modules/custom/alshaya_acm_product_category/drush.services.yml
+++ b/docroot/modules/custom/alshaya_acm_product_category/drush.services.yml
@@ -9,5 +9,6 @@ services:
       - '@metatag.manager'
       - '@metatag.token'
       - '@logger.factory'
+      - '@language_manager'
     tags:
       - { name: drush.command }
