--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/alshaya_rcs_main_menu.info.yml
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/alshaya_rcs_main_menu.info.yml
@@ -4,5 +4,5 @@ description: Alshaya implementation of RCS Main Menu. Check RCS module.
 core: 8.x
 core_version_requirement: ^8 || ^9
 dependencies:
-  - alshaya_rcs:alshaya_rcs
+  - alshaya_rcs_magento_placeholders:alshaya_rcs_magento_placeholders
   - alshaya_main_menu:alshaya_main_menu
