CORE-32356: Separated styles for Contact Us page.

--- a/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
+++ b/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
@@ -499,3 +499,9 @@ my-account:
   css:
     theme:
       css/conditional-sass/my-account/my-account.ltr.css: {}
+
+contact:
+  css:
+    theme:
+      css/conditional-sass/contact-us/contact-us.ltr.css: {}
+
