--- a/docroot/themes/custom/transac/alshaya_muji/alshaya_muji.info.yml
+++ b/docroot/themes/custom/transac/alshaya_muji/alshaya_muji.info.yml
@@ -114,3 +114,8 @@ libraries-override:
       css:
         theme:
           css/conditional-sass/my-account/my-account.ltr.css: css/conditional-sass/my-account/my-account.ltr.css
+
+  alshaya_white_label/contact:
+    css:
+      theme:
+        css/conditional-sass/contact-us/contact-us.ltr.css: css/conditional-sass/contact-us/contact-us.ltr.css
