--- a/docroot/themes/custom/transac/alshaya_footlocker/alshaya_footlocker.info.yml
+++ b/docroot/themes/custom/transac/alshaya_footlocker/alshaya_footlocker.info.yml
@@ -110,3 +110,8 @@ libraries-override:
       css:
         theme:
           css/conditional-sass/my-account/my-account.ltr.css: css/conditional-sass/my-account/my-account.ltr.css
+
+  alshaya_white_label/contact:
+    css:
+      theme:
+        css/conditional-sass/contact/contact.ltr.css: css/conditional-sass/contact/contact.ltr.css
