CORE-30472: V2 Api for product excluded linked sku.

--- a/docroot/modules/custom/alshaya_mobile_app/config/override/user.role.anonymous.yml
+++ b/docroot/modules/custom/alshaya_mobile_app/config/override/user.role.anonymous.yml
@@ -20,3 +20,4 @@ permissions:
   - 'restful get blocks_for_path'
   - 'restful get options_list'
   - 'restful get webform_options_list'
+  - 'restful get product_exclude_linked_v2'
