CORE-30475: V2 Api for skus/product-list.

--- a/docroot/modules/custom/alshaya_mobile_app/config/override/user.role.anonymous.yml
+++ b/docroot/modules/custom/alshaya_mobile_app/config/override/user.role.anonymous.yml
@@ -21,3 +21,4 @@ permissions:
   - 'restful get options_list'
   - 'restful get webform_options_list'
   - 'restful get product_exclude_linked_v2'
+  - 'restful get skus_product_list_v2'
