--- a/docroot/modules/react/alshaya_spc/alshaya_spc.services.yml
+++ b/docroot/modules/react/alshaya_spc/alshaya_spc.services.yml
@@ -48,6 +48,7 @@ services:
       - '@config.factory'
       - '@alshaya_stores_finder_transac.utility'
       - '@renderer'
+      - '@alshaya_acm_product.sku_images_helper'
 
   alshaya_spc.stock_helper:
     class: Drupal\alshaya_spc\Helper\AlshayaSpcStockHelper
