CORE-00: Add support for HMQA in local.

--- a/blt/alshaya_local_sites.yml
+++ b/blt/alshaya_local_sites.yml
@@ -29,6 +29,10 @@ sites:
     module: alshaya_hm
     type: alshaya_transac
     country: eg
+  hmqa:
+    module: alshaya_hm
+    type: alshaya_transac
+    country: qa
   bbwkw:
     module: alshaya_bbw
     type: alshaya_transac
