--- a/docroot/modules/custom/alshaya_stores_finder/config/install/views.view.stores_finder.yml
+++ b/docroot/modules/custom/alshaya_stores_finder/config/install/views.view.stores_finder.yml
@@ -389,9 +389,9 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          operator: or
+          operator: not
           value:
-            - '0'
+            1: '1'
           group: 1
           exposed: false
           expose:
@@ -1030,9 +1030,9 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          operator: or
+          operator: not
           value:
-            - '0'
+            1: '1'
           group: 1
           exposed: false
           expose:
@@ -1268,9 +1268,9 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          operator: or
+          operator: not
           value:
-            - '0'
+            1: '1'
           group: 1
           exposed: false
           expose:
@@ -2317,9 +2317,9 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          operator: or
+          operator: not
           value:
-            - '0'
+            1: '1'
           group: 1
           exposed: false
           expose:
