--- a/tests/behat/templates/variables/brands/bbw/env/uat/markets/kw/kw.yml
+++ b/tests/behat/templates/variables/brands/bbw/env/uat/markets/kw/kw.yml
@@ -3,7 +3,7 @@ variables:
   product_listing_page_url: "/shop-mapp/"
   spc_product_listing_page: '/shop-mapp/'
   spc_pdp_page: 'buy-focus-eucalyptus-tea-body-lotion.html'
-  spc_basket_page: '/shop-mapp/'
+  spc_basket_page: '/shop-mapp/gift-sets-offers/'
   spc_single_product_detail_page_coupon: '/buy-pink-gem-pocketbac-holder.html/'
   spc_multiple_product_detail_page_coupon: '/buy-japanese-cherry-blossom-bath-fizzy.html/'
   spc_single_product_detail_page_no_coupon: '/buy-magic-air-travel-size-shower-gel.html/'
