--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/config/install/field.field.taxonomy_term.rcs_category.field_icon.yml
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/config/install/field.field.taxonomy_term.rcs_category.field_icon.yml
@@ -20,7 +20,7 @@ skip_translation_check: 0
 default_value: {  }
 default_value_callback: ''
 settings:
-  file_directory: 'rcs-category-icons-[date:custom:Y]-[date:custom:m]'
+  file_directory: 'rcs-category-icons/[date:custom:Y]-[date:custom:m]'
   file_extensions: 'png gif jpg jpeg svg'
   max_filesize: ''
   max_resolution: ''
