--- a/docroot/modules/custom/alshaya_mobile_app/config/override/user.role.authenticated.yml
+++ b/docroot/modules/custom/alshaya_mobile_app/config/override/user.role.authenticated.yml
@@ -22,3 +22,4 @@ permissions:
   - 'restful get webform_options_list'
   - 'restful get product_exclude_linked_v2'
   - 'restful get skus_product_list_v2'
+  - 'restful get deeplink_v2'
