--- a/docroot/modules/custom/alshaya_rcs/alshaya_rcs.services.yml
+++ b/docroot/modules/custom/alshaya_rcs/alshaya_rcs.services.yml
@@ -5,6 +5,8 @@ services:
       - '@config.factory'
   alshaya_rcs_plp.breadcrumb:
     class: Drupal\alshaya_rcs\Breadcrumb\AlshayaRcsPLPBreadcrumbBuilder
-    arguments: ['@entity.repository', '@entity_type.manager']
+    # The priority here should be greater than 1002 otherwise the
+    # TermBreadcrumbBuilder service will override the RCS PLP breadcrumb.
+    # @see taxonomy.services.yml
     tags:
       - { name: breadcrumb_builder, priority: 1003 }
