--- a/docroot/modules/custom/alshaya_feed/alshaya_feed.services.yml
+++ b/docroot/modules/custom/alshaya_feed/alshaya_feed.services.yml
@@ -29,6 +29,7 @@ services:
       - '@config.factory'
       - '@metatag.manager'
       - '@metatag.token'
+      - '@alshaya_acm_product.price_helper'
 
   alshaya_feed.product_delta_feed:
     class: Drupal\alshaya_feed\AlshayaProductDeltaFeedHelper
