--- a/docroot/themes/custom/transac/alshaya_the_body_shop/alshaya_the_body_shop.info.yml
+++ b/docroot/themes/custom/transac/alshaya_the_body_shop/alshaya_the_body_shop.info.yml
@@ -105,3 +105,8 @@ libraries-override:
     css:
       theme:
         css/conditional-sass/my-account/my-account.ltr.css: css/conditional-sass/my-account/my-account.ltr.css
+
+  alshaya_white_label/aura-loyalty-global:
+    css:
+      theme:
+        css/conditional-sass/aura-loyalty-global/aura-loyalty-global.ltr.css: css/conditional-sass/aura-loyalty-global/aura-loyalty-global.ltr.css
