--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_listing/alshaya_rcs_listing.info.yml
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_listing/alshaya_rcs_listing.info.yml
@@ -7,3 +7,4 @@ dependencies:
   - alshaya_rcs:alshaya_rcs
   - alshaya_algolia_react:alshaya_algolia_react
   - alshaya_rcs_magento_placeholders:alshaya_rcs_magento_placeholders
+  - alshaya_rcs_main_menu:alshaya_rcs_main_menu
