--- a/docroot/modules/custom/alshaya_rcs/alshaya_rcs.libraries.yml
+++ b/docroot/modules/custom/alshaya_rcs/alshaya_rcs.libraries.yml
@@ -6,4 +6,5 @@ add_to_cart:
     - core/drupalSettings
     - alshaya_rcs_magento_placeholders/main
     - rcs_magento_placeholders/rcs_magento_placeholders
+    - alshaya_rcs_product/main
     - alshaya_acm_cart_notification/cart_notification_js
