--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/alshaya_rcs_main_menu.services.yml
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/alshaya_rcs_main_menu.services.yml
@@ -6,3 +6,12 @@ services:
       - '@config.factory'
       - '@renderer'
       - '@language_manager'
+  alshaya_rcs_main_menu.category_data_migration:
+    class: Drupal\alshaya_rcs_main_menu\Service\AlshayaRcsCategoryDataMigration
+    arguments:
+      - '@entity_type.manager'
+      - '@config.factory'
+      - '@renderer'
+      - '@language_manager'
+      - '@database'
+      - '@path.alias_manager'
