--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
         "drupal/email_registration": "^1.0",
         "drupal/endroid_qr_code": "^3.0",
         "drupal/external_hreflang": "^1.0",
-        "drupal/facets": "^1.8",
+        "drupal/facets": "1.0-alpha11",
         "drupal/field_group": "^3.0@beta",
         "drupal/form_options_attributes": "^1.0",
         "drupal/geolocation": "^3.7",
@@ -56,7 +56,6 @@
         "drupal/mailsystem": "^4.1",
         "drupal/media_entity": "^1.8",
         "drupal/media_entity_actions": "1.x-dev",
-        "drupal/memcache": "^2.3",
         "drupal/memory_limit_policy": "1.x-dev",
         "drupal/menu_admin_per_menu": "^1.0@RC",
         "drupal/menu_item_extras": "^2.15",
@@ -73,7 +72,7 @@
         "drupal/password_policy": "^3.0",
         "drupal/path_redirect_import": "^1.0@beta",
         "drupal/pathauto": "^1.6",
-        "drupal/pcb": "^2.3",
+        "drupal/pcb": "^1.7",
         "drupal/profile": "^1.0@alpha",
         "drupal/queue_unique": "^2.0",
         "drupal/r4032login": "^2.1",
@@ -219,8 +218,21 @@
                 "CORE-31041 disabled skus not deleted for product list index": "https://www.drupal.org/files/issues/2021-07-12/search_api_entity_delete_alter.patch"
             },
             "drupal/facets": {
+                "Fatal error on first facet being empty": "patches/facets/custom-2877004-2877322.patch",
+                "Ajaxifying facet filters": "https://www.drupal.org/files/issues/2018-04-17/facets-views-ajax-2826449-8.x-alpha11-146.patch",
+                "Soft limits ajax once issue": "patches/facets/soft-limit-patch-to-work-with-custom-js.patch",
                 "Fix ajax facets breaking sort": "patches/facets/fix-ajax-facets-breaking-sort.patch",
-                "Improve facets hierarchy processor performance": "https://www.drupal.org/files/issues/2020-02-12/3095601-8.patch"
+                "Allow to alter url built for facet item": "https://www.drupal.org/files/issues/2018-05-07/query_string_alter_3.patch",
+                "Facets AJAX using GET": "patches/facets/custom-facets-ajax-get.patch",
+                "CORE-2150 Get facets working with filters in url on page load": "patches/facets/CORE-2150-get_it_working_with_params_in_url.patch",
+                "FacetsHierarchy Taxonomy uses old (taxonomy_term_hierachy) table": "https://www.drupal.org/files/issues/2919034-22.patch",
+                "CORE-8843 Fixes the issue when li no direct child of ul for facet summary": "patches/facets/custom-fix-li-CORE-8843.patch",
+                "CORE-9356 Dynamic landing pages": "patches/facets/CORE-9356-changes-for-facets-pretty-paths.patch",
+                "Improve performance for taxonomy hierarchical facets": "https://www.drupal.org/files/issues/2019-01-30/3005018-8.patch",
+                "Improve facets hierarchy processor performance": "https://www.drupal.org/files/issues/2020-02-12/3095601-8.patch",
+                "CORE-16705 Resolve undefined index" : "https://www.drupal.org/files/issues/2020-04-15/undefined-index-settings-3127730-1.patch",
+                "CORE-25698 improve performance": "patches/facets/CORE-25698_facets_WidgetPluginBase.patch",
+                "Fix Facets Summary Block Deriver definitions getter": "https://www.drupal.org/files/issues/2018-07-17/facets-summary_block_deriver_fix-2986243-02.patch"
             },
             "drupal/better_exposed_filter": {
                 "Undefined index: input_required notice": "https://www.drupal.org/files/issues/undefined_index_input_required-2857685-11.patch"
@@ -300,6 +312,9 @@
             },
             "drupal/entity_reference_revisions": {
                 "Embed Paragraph Content in Normalized Parent Entities (REST)": "https://www.drupal.org/files/issues/embed_paragraph_content-2848878-43.patch"
+            },
+            "drupal/memcache": {
+                "Support for cache tags": "https://www.drupal.org/files/issues/2018-09-11/2989601-cache-tags-memcache-6.patch"
             },
             "drupal/pathauto": {
                 "Improvement: Avoid update query for key_value table": "https://www.drupal.org/files/issues/2020-11-23/3184164-2.patch",
