CORE-32007: Added postpay for simple RCS product page.

--- a/docroot/modules/custom/alshaya_acm_product/alshaya_acm_product.libraries.yml
+++ b/docroot/modules/custom/alshaya_acm_product/alshaya_acm_product.libraries.yml
@@ -57,3 +57,13 @@ add_free_gift_promotions:
   dependencies:
     - core/jquery
     - core/drupalSettings
+
+acq_product_info:
+  version: 1.x
+  js:
+    js/alshaya_acm_product.pdp.v1.js: {}
+
+rcs_product_info:
+  version: 1.x
+  js:
+    js/alshaya_acm_product.pdp.v2.js: {}
