--- a/composer.json
+++ b/composer.json
@@ -73,7 +73,7 @@
         "drupal/path_redirect_import": "^1.0@beta",
         "drupal/pathauto": "^1.6",
         "drupal/pcb": "^1.7",
-        "drupal/profile": "1.0.0-rc6",
+        "drupal/profile": "^1.3",
         "drupal/queue_unique": "^2.0",
         "drupal/r4032login": "^2.1",
         "drupal/recaptcha": "^3.0",
