CORE-32777: Adding onFocus checks to avoid running React apps when tab has no focus.

--- a/docroot/modules/react/alshaya_algolia_react/alshaya_algolia_react.libraries.yml
+++ b/docroot/modules/react/alshaya_algolia_react/alshaya_algolia_react.libraries.yml
@@ -51,6 +51,7 @@ algolia_common:
     js/alshaya_algolia_global.js: {}
   dependencies:
     - core/jquery
+    - alshaya_master/on_focus_attach
 
 back_to_plp:
   js:
