--- a/docroot/modules/custom/alshaya_master/alshaya_master.libraries.yml
+++ b/docroot/modules/custom/alshaya_master/alshaya_master.libraries.yml
@@ -61,3 +61,9 @@ common_functions:
   dependencies:
     - core/jquery
     - core/drupal
+
+on_focus_attach:
+  js:
+    js/alshaya_on_focus.js: {}
+  dependencies:
+    - core/jquery
