--- a/docroot/modules/react/alshaya_pdp_react/alshaya_pdp_react.libraries.yml
+++ b/docroot/modules/react/alshaya_pdp_react/alshaya_pdp_react.libraries.yml
@@ -5,5 +5,6 @@ pdp_magazine_v2_layout:
     dist/pdp_layout.bundle.js: { }
   dependencies:
     - alshaya_react/react
+    - alshaya_master/on_focus_attach
     - core/drupalSettings
     - core/drupal.debounce
