--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_product/alshaya_rcs_product.libraries.yml
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_product/alshaya_rcs_product.libraries.yml
@@ -4,3 +4,6 @@ main:
   dependencies:
     - core/jquery
     - core/drupalSettings
+    - rcs_magento_placeholders/rcs_magento_placeholders
+    - alshaya_rcs_magento_placeholders/main
+
