CORE-31897: Merge changes from upstream and refactor before pushing to upstream.

--- a/docroot/modules/custom/rcs_placeholders/rcs_placeholders.libraries.yml
+++ b/docroot/modules/custom/rcs_placeholders/rcs_placeholders.libraries.yml
@@ -1,6 +1,7 @@
 helpers:
   version: 1.x
   js:
+    js/rcs_placeholders.static_storage.js: { }
     js/rcs_placeholders-exports.js: { }
   dependencies:
     - core/jquery
