--- a/composer.json
+++ b/composer.json
@@ -84,7 +84,7 @@
         "drupal/restui": "^1.13",
         "drupal/robotstxt": "^1.1",
         "drupal/role_delegation": "^1.0@alpha",
-        "drupal/s3fs": "3.0.0-alpha14",
+        "drupal/s3fs": "^3.0@beta",
         "drupal/search_api_algolia": "^3.0@beta",
         "drupal/search_api_autocomplete": "^1.0",
         "drupal/search_api_solr": "^1.11",
