--- a/docroot/modules/react/package.json
+++ b/docroot/modules/react/package.json
@@ -51,6 +51,7 @@
     "algoliasearch": "^3.34.0",
     "axios": "^0.19.0",
     "cleave.js": "^1.5.6",
+    "crypto-js": "^4.1.1",
     "css-loader": "^3.6.0",
     "element-closest-polyfill": "^1.0.0",
     "file-loader": "^6.0.0",
