CORE-32992: Added the RCS promotion content type.

--- a/docroot/modules/custom/rcs_placeholders/config/install/rcs_placeholders.settings.yml
+++ b/docroot/modules/custom/rcs_placeholders/config/install/rcs_placeholders.settings.yml
@@ -23,3 +23,6 @@ product:
   placeholder_nid:
   path_prefix: 'buy-'
   enrichment: false
+promotion:
+  placeholder_nid:
+  path_prefix: 'promotion'
