CORE-31976: Added reviews summary section to RCS PDP.

--- a/docroot/modules/react/alshaya_bazaar_voice/alshaya_bazaar_voice.libraries.yml
+++ b/docroot/modules/react/alshaya_bazaar_voice/alshaya_bazaar_voice.libraries.yml
@@ -29,3 +29,12 @@ bvpixel_tracking:
 iovation:
   js:
     js/assets/iovation-loader.js: {}
+
+reviewsV2:
+  js:
+    dist/reviewsV2.bundle.js: {}
+  dependencies:
+    - core/jquery
+    - core/drupal
+    - core/drupalSettings
+    - alshaya_react/react
