--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_product/alshaya_rcs_product.libraries.yml
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_product/alshaya_rcs_product.libraries.yml
@@ -5,3 +5,7 @@ main:
     - rcs_magento_placeholders/rcs_magento_placeholders
     - alshaya_rcs_magento_placeholders/main
 
+rcs_product_info:
+  version: 1.x
+  js:
+    js/alshaya_rcs_product.pdp.v2.js: {}
