CORE-31976: Added ratings section to RCS PDP.

--- a/docroot/modules/react/alshaya_bazaar_voice/alshaya_bazaar_voice.libraries.yml
+++ b/docroot/modules/react/alshaya_bazaar_voice/alshaya_bazaar_voice.libraries.yml
@@ -38,3 +38,12 @@ reviewsV2:
     - core/drupal
     - core/drupalSettings
     - alshaya_react/react
+
+ratingV2:
+  js:
+    dist/ratingV2.bundle.js: {}
+  dependencies:
+    - core/jquery
+    - core/drupal
+    - core/drupalSettings
+    - alshaya_react/react
