CORE-32731: Updated composser file.

--- a/.travis.yml
+++ b/.travis.yml
@@ -123,6 +123,7 @@ install:
   - cd ${BUILD_DIR}
 
 script:
+  - blt blt:telemetry:disable --no-interaction
   # Changing path to disable behat test on Travis.
   # - source $BLT_DIR/scripts/travis/run_tests
   - source ${BUILD_DIR}/blt/scripts/run_tests
