--- a/blt/blt.yml
+++ b/blt/blt.yml
@@ -74,8 +74,6 @@ command-hooks:
 import: '${repo.root}/blt/setup.local.xml'
 behat:
   web-driver: chrome
-  chrome:
-    args: '--window-size=1920,1080'
 multisite:
   name:
     - g
@@ -86,7 +84,11 @@ validate:
     functions: [alshaya_main_menu, alshaya_secondary_main_menu]
 cloud:
   appId: f8ab35c4-f119-4acd-b080-d3014358e5b8
-# We must disable security checks for module updates until
-# https://github.com/drush-ops/drush/issues/3748 will be fixed
-# (test with drush pm:security command)
-disable-targets.tests.security.check.updates: true
+disable-targets:
+  tests:
+    security: { check: { updates: true } }
+    phpcs: { sniff: { all: true } }
+    behat: { run: true }
+tests:
+  chrome:
+    args: '--window-size=1920,1080'
