CORE-32003: Moved code to rcs product module.

--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_product/alshaya_rcs_product.libraries.yml
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_product/alshaya_rcs_product.libraries.yml
@@ -9,3 +9,9 @@ rcs_product_info:
   version: 1.x
   js:
     js/alshaya_rcs_product.pdp.v2.js: {}
+
+schema_org:
+  js:
+    js/alshaya_rcs_product.schema_org.js: {}
+  dependencies:
+    - rcs_placeholders/helpers
