--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/config/override/core.entity_view_display.taxonomy_term.rcs_category.default.yml
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/config/override/core.entity_view_display.taxonomy_term.rcs_category.default.yml
@@ -7,6 +7,9 @@ dependencies:
     - field.field.taxonomy_term.rcs_category.field_icon
     - field.field.taxonomy_term.rcs_category.field_include_in_desktop
     - field.field.taxonomy_term.rcs_category.field_include_in_mobile_tablet
+    - field.field.taxonomy_term.rcs_category.field_logo_active_image
+    - field.field.taxonomy_term.rcs_category.field_logo_header_image
+    - field.field.taxonomy_term.rcs_category.field_logo_inactive_image
     - field.field.taxonomy_term.rcs_category.field_main_menu_highlight
     - field.field.taxonomy_term.rcs_category.field_move_to_right
     - field.field.taxonomy_term.rcs_category.field_override_target_link
@@ -79,6 +82,45 @@ content:
       format_custom_true: ''
     third_party_settings: {  }
     type: boolean
+    region: content
+  field_logo_active_image:
+    weight: 12
+    label: above
+    settings:
+      svg_attributes:
+        width: ''
+        height: ''
+      svg_render_as_image: true
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
+    region: content
+  field_logo_header_image:
+    weight: 13
+    label: above
+    settings:
+      svg_attributes:
+        width: ''
+        height: ''
+      svg_render_as_image: true
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
+    region: content
+  field_logo_inactive_image:
+    weight: 14
+    label: above
+    settings:
+      svg_attributes:
+        width: ''
+        height: ''
+      svg_render_as_image: true
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
     region: content
   field_main_menu_highlight:
     weight: 6
