CORE-32731: Updated blt, run_tests script.

--- a/blt/blt.yml
+++ b/blt/blt.yml
@@ -93,4 +93,5 @@ tests:
     args: '--window-size=1920,1080'
   drupal:
     test-runner: run-tests-script
+    sudo-run-tests: false
     web-driver: chromedriver
