--- a/docroot/themes/custom/transac/alshaya_footlocker/alshaya_footlocker.info.yml
+++ b/docroot/themes/custom/transac/alshaya_footlocker/alshaya_footlocker.info.yml
@@ -115,3 +115,8 @@ libraries-override:
     css:
       theme:
         css/conditional-sass/contact-us/contact-us.ltr.css: css/conditional-sass/contact-us/contact-us.ltr.css
+
+  alshaya_white_label/alshaya-vat-certificate:
+    css:
+      theme:
+        css/conditional-sass/alshaya-vat-certificate/alshaya-vat-certificate.ltr.css: css/conditional-sass/alshaya-vat-certificate/alshaya-vat-certificate.ltr.css
