--- a/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
+++ b/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
@@ -509,3 +509,8 @@ sitemap:
   css:
     theme:
       css/conditional-sass/sitemap/sitemap.ltr.css: {}
+
+alshaya-vat-certificate:
+  css:
+    theme:
+      css/conditional-sass/alshaya-vat-certificate/alshaya-vat-certificate.ltr.css: {}
