--- a/.travis.yml
+++ b/.travis.yml
@@ -43,6 +43,9 @@ matrix:
       # there will be fresh PR merges which will take care of pushing.
       if: type = push AND (branch IN (master, uat, qa, develop) OR commit_message !~ /(git\+ssh)/)
 
+services:
+  - mysql
+
 env:
   global:
     - COMPOSER_BIN=$TRAVIS_BUILD_DIR/vendor/bin
